# lore

./: .containerignore  .gitignore  Containerfile  README.md  lore.yaml.sample  pyproject.toml
loremaster/: EVALUATION.md  EXTENDING.md  evaluation.xml  pyproject.toml
loremaster/loremaster/: __init__.py  auth.py  config.py  embedding.py  extension.py  graph.py  logging_setup.py  read_file.py  search.py  server.py  symbols.py
loremaster/loremaster/index/: __main__.py  cli.py  indexer.py  kuzu_resilient.py  manifest.py  paths.py  reconcile.py  records.py  schema.py  sqlite_resilient.py  watcher.py
loremaster/loremaster/memory/: __init__.py  ledger.py  store.py
loremaster/loremaster/source/: __init__.py  local_directory.py  snapshot.py
loremaster/loremaster/store/: qdrant.py
loremaster/tests/: _extension_helpers.py  conftest.py  test_auth.py  test_cli.py  test_config.py  test_eager_startup.py  test_embedding.py  test_embedding_prompt_name.py  test_extension.py  test_graph.py  test_graph_wiring.py  test_indexer.py  test_lifespan_framework.py  test_logging_setup.py  test_manifest.py  test_mcp_server.py  test_memory_durability.py  test_memory_store.py  test_qdrant_resilience.py  test_qdrant_store.py  test_read_file.py  test_reconcile.py  test_records.py  test_resilient_db.py  test_schema_rebuild.py  test_search.py  test_server.py  test_server_entrypoint.py  test_server_version.py  test_smoke.py  test_source.py  test_startup_divergence_reconcile.py  test_static_snapshot_reacquire.py  test_symbols.py  test_watcher.py
lorescribe/: EXTENDING.md  pyproject.toml
lorescribe/lorescribe/: __init__.py  astroid_parse.py  base.py  javascript.py  markdown.py  models.py  python_ast.py  registry.py  sql.py  stylesheet.py  text.py  xml_generic.py
lorescribe/tests/: conftest.py  test_astroid_parse.py  test_astroid_resolve.py  test_base.py  test_javascript.py  test_markdown.py  test_models.py  test_python_ast.py  test_registry.py  test_smoke.py  test_sql.py  test_stylesheet.py  test_text_chunker.py  test_xml_generic.py
loresigil/: pyproject.toml
loresigil/loresigil/: __init__.py  base.py  batching.py  factory.py  resilient.py  tei.py  testing.py  tokens.py  voyage_cloud.py
loresigil/loresigil/data/: voyage4_tokenizer.json.sha256
loresigil/tests/: conftest.py  test_base.py  test_batching.py  test_factory.py  test_resilient.py  test_response_validation.py  test_smoke.py  test_tei.py  test_tei_prompt_name.py  test_tei_prompt_reserve.py  test_testing.py  test_tokens.py  test_voyage_cloud.py
scripts/: typecheck.sh
skills/lore-deploy/: SKILL.md
skills/lore-deploy/references/: lifecycle.md  server-interface.md
skills/lore-deploy/scripts/: ensure_collections.py  lore_deploy.py  merge_mcp_json.py  probe_embed.py  test_lore_deploy.py  test_merge_mcp_json.py
