[project]
name = "loremaster"
version = "0.1.0"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
description = "Orchestration layer: MCP server backed by Qdrant for the lore project."
dependencies = [
    "lorescribe",
    "loresigil",
    "mcp[cli]>=1.27",
    "qdrant-client>=1.18",
    "watchdog>=6.0",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "pyyaml>=6.0.2",
    "kuzu>=0.11.3",
]

[tool.uv.sources]
lorescribe = { workspace = true }
loresigil = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loremaster"]
