[project]
name = "lorescribe"
version = "0.1.0"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
description = "Document ingestion and text splitting for the lore project."
dependencies = [
    "pydantic>=2.13",
    "langchain-text-splitters>=1.1",
    "sqlglot>=30.8",
    "defusedxml>=0.7.1",
    "astroid>=4.1.2",
]

[project.optional-dependencies]
lxml = ["lxml>=5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lorescribe"]
